syntax = "proto3";

message BufferOperation {
  Timestamp start_id = 1;
  uint64 start_offset = 2;
  Timestamp end_id = 3;
  uint64 end_offset = 4;
  GlobalTimestamp version_in_range = 5;
  string new_text = 6;
  Timestamp local_timestamp = 7;
  Timestamp lamport_timestamp = 8;
}

message Timestamp {
   ReplicaId replica_id = 1;
   uint64 value = 2;
}

message GlobalTimestamp {
  repeated Timestamp timestamps = 1;
}

message ReplicaId {
  bytes uuid = 1;
}
